Adding temporary fix for post issue in fragments.

--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/fragments/reset-password/reset-password.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/fragments/reset-password/reset-password.hbs
@@ -13,7 +13,7 @@
         {{message}}
     </div>
 {{/if}}
-<form method="post" class="form-horizontal">
+<form method="post" class="form-horizontal" action="?reset-password">
     <div class="form-group">
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
             <label for="oldPassword">{{t "user-portal.user.password.reset.old"}}</label>
