Adding error messages for profile management

--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/fragments/profile/profile.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/fragments/profile/profile.hbs
@@ -1,5 +1,30 @@
 <h3>{{t "user-portal.user.profile"}}</h3>
 <hr/>
+{{#if success}}
+    {{#if message}}
+        <div class="alert alert-success" role="alert">
+            <i class="icon fw fw-success"></i><strong>{{t "user-portal.user.profile.success"}}</strong>
+            {{message}}
+            <button type="button" class="close" aria-label="close" data-dismiss="alert">
+                <span aria-hidden="true">
+                    <i class="fw fw-cancel"></i>
+                </span>
+            </button>
+        </div>
+    {{/if}}
+{{else}}
+    {{#if message}}
+        <div class="alert alert-danger" role="alert">
+            <i class="icon fw fw-error"></i><strong>{{t "user-portal.user.profile.failure"}}</strong>
+            {{message}}
+            <button type="button" class="close" aria-label="close" data-dismiss="alert">
+                <span aria-hidden="true">
+                    <i class="fw fw-cancel"></i>
+                </span>
+            </button>
+        </div>
+    {{/if}}
+{{/if}}
 <form method="post" class="form-horizontal" action="?{{profile}}">
     <div class="form-group">
         <div class="col-xs-6 col-sm-4 col-md-3 col-lg-2">
@@ -12,13 +37,13 @@
         </div>
     </div>
     {{#each uiEntries}}
-    <div class="form-group">
-        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
-            <label for="{{this.claimURI}}">{{this.displayName}}<span>{{requiredIcon}}</span></label>
-            <input type="{{this.dataType}}" name="{{this.claimURI}}" id="{{this.claimURI}}" class="form-control"
-                   value="{{this.value}}" {{this.readonly}} {{this.required}}/>
+        <div class="form-group">
+            <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
+                <label for="{{this.claimURI}}">{{this.displayName}}<span>{{requiredIcon}}</span></label>
+                <input type="{{this.dataType}}" name="{{this.claimURI}}" id="{{this.claimURI}}" class="form-control"
+                       value="{{this.value}}" {{this.readonly}} {{this.required}}/>
+            </div>
         </div>
-    </div>
     {{/each}}
     <input class="btn btn-primary add-margin-bottom-3x" type="submit" value="Update"/>
 </form>
