--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/fragments/profile/profile.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/fragments/profile/profile.hbs
@@ -41,7 +41,8 @@
             <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
                 <label for="{{this.claimURI}}">{{this.displayName}}<span>{{requiredIcon}}</span></label>
                 <input type="{{this.dataType}}" name="{{this.claimURI}}" id="{{this.claimURI}}" class="form-control"
-                       value="{{this.value}}" {{this.readonly}} {{this.required}}/>
+                       maxlength="250" value="{{this.value}}" {{this.readonly}} {{this.required}}
+                       pattern="{{this.regex}}" title="{{this.regex}}"/>
             </div>
         </div>
     {{/each}}
