Adding file uploading capability

--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/account/account-setting.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/account/account-setting.hbs
@@ -2,6 +2,7 @@
 {{favicon "images/favicon.png" type="image/png"}}
 {{title "Home | " @config.appName}}
 {{js "js/account-setting.js"}}
+{{js "js/profile.js"}}
 {{css "css/user-portal.css"}}
 
 {{#fillZone "content"}}
