--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/fragments/profile/profile.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/fragments/profile/profile.hbs
@@ -25,17 +25,20 @@
         </div>
     {{/if}}
 {{/if}}
-<form method="post" class="form-horizontal" action="?{{profile}}">
+<form method="post" id="image-uploader" class="form-horizontal" action="?image" enctype="multipart/form-data">
     <div class="form-group">
         <div class="col-xs-6 col-sm-4 col-md-3 col-lg-2">
             <div class="thumbnail icon">
                 <div class="square-element setbgcolor">
-                    <a class="sub-icon" title="Edit"><i class="fw fw-camera fw-lg"></i></a>
+                    <a id="image-edit" class="sub-icon" title="Edit"><i class="fw fw-camera fw-lg"></i></a>
                     <div class="user-name-icon">D</div>
                 </div>
             </div>
         </div>
     </div>
+    <input type="file" id="image" name="image" style="visibility: hidden; width: 1px; height: 1px" accept="image/*"/>
+</form>
+<form method="post" class="form-horizontal" action="?{{profile}}">
     {{#each uiEntries}}
         <div class="form-group">
             <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
