using main layout in all the pages, and adding breadcrumbs

--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/account/account-setting.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/account/account-setting.hbs
@@ -5,6 +5,15 @@
 {{js "js/profile.js"}}
 {{css "css/user-portal.css"}}
 
+{{#fillZone "breadcrumbs"}}
+    <div class="breadcrumb-wrapper">
+        <ol class="breadcrumb">
+            <li><a href="#"><i class="icon fw fw-home"></i> <span class="hidden-xs">Home</span></a></li>
+            <li class="active"><a href="#">Account Settings</a></li>
+        </ol>
+    </div>
+{{/fillZone}}
+
 {{#fillZone "content"}}
     <div class="body-wrapper acc-settings">
         <div class="container-fluid">
