--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/account/account-setting.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/account/account-setting.hbs
@@ -86,7 +86,7 @@
                         <div class="tab-pane" id="security-questions">
                             <h3>Security Question(s)</h3>
                             <div class="col-md-12">
-
+                                {{fragment "org.wso2.carbon.iam.user-portal.feature.security-questions"}}
                             </div>
                         </div>
                         <div class="tab-pane" id="local">
