--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/user/signup.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/user/signup.hbs
@@ -40,7 +40,7 @@
                             {{/each}}
 
                             </br>
-                            <label for=password>Password<span>*</span></label></br>
+                            <label for="password">Password<span>*</span></label></br>
                             <input type="password" name="password" id="password" class="form-control" placeholder="password" pattern="((?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[@#$%]).{6,20})" required/>
                             </br></br><input id="register" class="btn btn-default btn-primary add-margin-right-2x"
                                              type="submit" value="Register"/></div>
