update UI texts correctly

--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/account/account-setting.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/account/account-setting.hbs
@@ -78,7 +78,7 @@
                             </div>
                         </div>
                         <div class="tab-pane" id="authentication">
-                            <h3>Multi-Factor Authentication</h3>
+                            <h3>Multi-factor Authentication</h3>
                             <div class="col-md-12">
 
                             </div>
