--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/fragments/reset-password/reset-password.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/fragments/reset-password/reset-password.hbs
@@ -2,7 +2,7 @@
 <hr/>
 <div class="alert alert-info" role="alert">
     <i class="icon fw fw-warning"></i>
-    In order to update your password, you should re-enter your current password.
+    In order to update your password, you must re-enter your current password.
 </div>
 {{#if success}}
     <div class="alert alert-success alert-dismissible fade in" role="alert">
