Fixed issue in rendering signup page due to redirection to login everytime

--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/user/reset-password.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/user/reset-password.hbs
@@ -1,4 +1,4 @@
-{{layout "main"}}
+{{layout "main-usermenu"}}
 {{favicon "images/favicon.png" type="image/png"}}
 {{title "Home | " @config.appName}}
 {{#fillZone "content"}}
