--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/layouts/main.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/layouts/main.hbs
@@ -5,61 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     {{#placeholder "favicon"}}
-        <link rel="shortcut icon" href="{{public "images/default-favicon.png"}}" type="image/png"/>
+        <link rel="shortcut icon" href="{{public "images/default-favicon.png"}}" type="image/png" />
     {{/placeholder}}
-    <title>{{#placeholder "title"}}UUF Foundation{{/placeholder}}</title>
+    <title>{{#placeholder "title"}}Simple Auth{{/placeholder}}</title>
     {{placeholder "css"}}
     {{placeholder "headJs"}}
     {{placeholder "headOther"}}
 </head>
 
 <body class="sticky-footer">
-<!-- header -->
 <header class="header header-default">
     <div class="container-fluid">
         <div class="pull-left brand">
             <a href="{{@contextPath}}/">
-                <img src="{{public "images/logo.png"}}" class="logo" alt="wso2" title="wso2" class="logo"/>
+                <img src="{{public "images/logo.png"}}" class="logo" alt="wso2" title="wso2"/>
                 <span>{{@config.appName}}</span>
             </a>
         </div>
-
-        {{defineZone "usermenu"}}
     </div>
 </header>
-<!-- /header -->
-
-<div class="breadcrumb">
-    {{defineZone "breadcrumbs"}}
-</div>
 
 <div class="page-content-wrapper">
-
-    <!-- left-sidebar -->
-    <div class="sidebar-wrapper sidebar-nav" data-side="left" data-width="260" data-container=".page-content-wrapper" data-container-divide="true" data-fixed-offset-top="0" data-spy="affix" data-offset-top="80" id="sidebar-theme">
-        <ul class="nav nav-pills nav-stacked pages">
-            <li><a href="{{@contextPath}}/Applications">Applications</a></li>
-        </ul>
-    </div>
-
-    <!-- navbar -->
-    <div class="navbar-wrapper">
-        <nav class="navbar navbar-default navbar-doc" data-spy="affix" data-offset-top="80" data-offset-bottom="40">
-            <div class="container-fluid">
-                <div class="navbar-header">
-                    <a  class="navbar-menu-toggle" data-toggle="sidebar" data-target="#sidebar-theme" aria-expanded="false" rel="leftmenu-sidebar">
-                    <span class="icon fw-stack">
-                        <i class="fw fw-menu fw-stack-1x toggle-icon-left-arrow"></i>
-                    </span>
-                    </a>
-                </div>
-            </div>
-        </nav>
-    </div>
-    <!-- /navbar -->
-
     <div class="container-fluid">
-        {{defineZone "content"}}
+        <div class="body-wrapper">
+            {{defineZone "alert"}}
+            {{defineZone "message"}}
+            {{defineZone "content"}}
+        </div>
     </div>
 </div>
 <!-- footer -->
@@ -69,6 +41,7 @@
     </div>
 </footer>
 <!-- /footer -->
+{{defineZone "modal"}}
 {{placeholder "js"}}
 </body>
 </html>
