Changed the layouts names
Conflicts:
	portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/account/account-setting.hbs
	portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/index.hbs
	portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/login.hbs

--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/user/profile/default-profile.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/user/profile/default-profile.hbs
@@ -1,4 +1,4 @@
-{{layout "main-usermenu"}}
+{{layout "privilege"}}
 {{favicon "images/favicon.png" type="image/png"}}
 {{title "Home | " @config.appName}}
 {{js "js/user-account.js"}}
