--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/user/signup.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/user/signup.hbs
@@ -1,4 +1,4 @@
-{{layout "main"}}
+{{layout "unprivilege"}}
 {{favicon "images/favicon.png" type="image/png"}}
 {{fragment "org.wso2.carbon.uuf.common.foundation.jquery-validation"}}
 {{title "Home | " @config.appName}}
