--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/layouts/privilege.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/layouts/privilege.hbs
@@ -29,19 +29,35 @@
 </header>
 <!-- /header -->
 
-<div class="breadcrumb-container">
+<div class="breadcrumb">
     {{defineZone "breadcrumbs"}}
 </div>
 
-<div class="modal-container">
-    {{defineZone "modal"}}
-</div>
-
-<div class="navbar-container">
-    {{defineZone "navbar"}}
-</div>
-
 <div class="page-content-wrapper">
+
+    <!-- left-sidebar -->
+    <div class="sidebar-wrapper sidebar-nav" data-side="left" data-width="260" data-container=".page-content-wrapper" data-container-divide="true" data-fixed-offset-top="0" data-spy="affix" data-offset-top="80" id="sidebar-theme">
+        <ul class="nav nav-pills nav-stacked pages">
+            <li><a href="{{@contextPath}}/Applications">Applications</a></li>
+        </ul>
+    </div>
+
+    <!-- navbar -->
+    <div class="navbar-wrapper">
+        <nav class="navbar navbar-default navbar-doc" data-spy="affix" data-offset-top="80" data-offset-bottom="40">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <a  class="navbar-menu-toggle" data-toggle="sidebar" data-target="#sidebar-theme" aria-expanded="false" rel="leftmenu-sidebar">
+                    <span class="icon fw-stack">
+                        <i class="fw fw-menu fw-stack-1x toggle-icon-left-arrow"></i>
+                    </span>
+                    </a>
+                </div>
+            </div>
+        </nav>
+    </div>
+    <!-- /navbar -->
+
     <div class="container-fluid">
         {{defineZone "content"}}
     </div>
@@ -49,11 +65,7 @@
 <!-- footer -->
 <footer class="footer">
     <div class="container-fluid">
-        <p>
-            {{t "footer.content"}} | &copy;
-            <script>document.write((new Date().getFullYear()).toString());</script>
-            <a href="http://wso2.com/" target="_blank"><i class="icon fw fw-wso2"></i> Inc</a>.
-        </p>
+        {{defineZone "footer"}}
     </div>
 </footer>
 <!-- /footer -->
