Changed the layouts names

--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/account/account-setting.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/account/account-setting.hbs
@@ -1,4 +1,4 @@
-{{layout "main-usermenu"}}
+{{layout "privilege"}}
 {{favicon "images/favicon.png" type="image/png"}}
 {{title "Home | " @config.appName}}
 {{fragment "org.wso2.carbon.uuf.common.foundation.jquery-validation" }}
