--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/login.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/login.hbs
@@ -1,4 +1,4 @@
-{{layout "main"}}
+{{layout "unprivilege"}}
 {{favicon "images/favicon.png" type="image/png"}}
 {{title "Login | " @config.appName}}
 {{css "css/user-portal.css"}}
