--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/index.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/index.hbs
@@ -1,3 +1,3 @@
-{{layout "main-usermenu"}}
+{{layout "privilege"}}
 {{favicon "images/favicon.png" type="image/png"}}
 {{title "Home | " @config.appName}}
