--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/login.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/login.hbs
@@ -72,7 +72,7 @@
                                     </div>
                                 </div>
                                 <a href="{{@contextPath}}/recover-password" class="add-margin-bottom-5x remove-margin-lg remove-margin-md">Forgot Password</a>
-                                <p class="hidden-xs hidden-sm">Don't have an account? <a href="{{@contextPath}}/user/signup">Register Now</a></p>
+                                <p class="hidden-xs hidden-sm">Don't have an account? <a href="{{@contextPath}}/signup">Register Now</a></p>
                             </form>
                         </div>
                     </div>
