fix for tabs not redirecting issue
Conflicts:
	portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/fragments/reset-password/reset-password.hbs

--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/fragments/profile/profile.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/fragments/profile/profile.hbs
@@ -38,7 +38,7 @@
     </div>
     <input type="file" id="image" name="image" style="visibility: hidden; width: 1px; height: 1px" accept="image/*"/>
 </form>
-<form method="post" class="form-horizontal" action="?{{profile}}">
+<form method="post" class="form-horizontal" action="?{{profile}}#{{profile}}">
     {{#each uiEntries}}
         <div class="form-group">
             <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
