Breadcrumb alignment fix
Conflicts:
	portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/public/css/user-portal.css

--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/layouts/privilege.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/layouts/privilege.hbs
@@ -29,7 +29,7 @@
 </header>
 <!-- /header -->
 
-<div class="breadcrumb">
+<div class="breadcrumb-container">
     {{defineZone "breadcrumbs"}}
 </div>
 
