Reset password code structuring

--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/fragments/reset-password/reset-password.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/fragments/reset-password/reset-password.hbs
@@ -1,3 +1,5 @@
+{{js "js/reset-password.js"}}
+
 <h3>{{t "user-portal.user.password.reset"}}</h3>
 <hr/>
 <div class="alert alert-info" role="alert">
