Fixing Home page ux reviews
Conflicts:
	portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/lang/en_US.properties
	portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/index.hbs

--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/layouts/privilege.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/layouts/privilege.hbs
@@ -65,7 +65,11 @@
 <!-- footer -->
 <footer class="footer">
     <div class="container-fluid">
-        {{defineZone "footer"}}
+        <p>
+            {{t "user-portal.footer.content"}} | &copy;
+            <script>document.write((new Date().getFullYear()).toString());</script>
+            <a href="http://wso2.com/" target="_blank"><i class="icon fw fw-wso2"></i> Inc</a>.
+        </p>
     </div>
 </footer>
 <!-- /footer -->
