--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/layouts/unprivilege.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/layouts/unprivilege.hbs
@@ -37,7 +37,13 @@
 <!-- footer -->
 <footer class="footer">
     <div class="container-fluid">
-        {{defineZone "footer"}}
+        <div class="container-fluid">
+            <p>
+                {{t "user-portal.footer.content"}} | &copy;
+                <script>document.write((new Date().getFullYear()).toString());</script>
+                <a href="http://wso2.com/" target="_blank"><i class="icon fw fw-wso2"></i> Inc</a>.
+            </p>
+        </div>
     </div>
 </footer>
 <!-- /footer -->
