Adding en-US challange question yaml and fixing a spelling mistake
Conflicts:
	portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/lang/en_US.properties
	product/carbon-home/conf/identity/challenge-questions/en-US.yaml

--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/index.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/index.hbs
@@ -92,7 +92,7 @@
 {{#fillZone "breadcrumbs"}}
     <div class="breadcrumb-wrapper">
         <ol class="breadcrumb">
-            <li><a href="#"><i class="icon fw fw-home"></i> <span class="hidden-xs">{{t "user-portal.applications.breadcumb"}}</span></a></li>
+            <li><a href="#"><i class="icon fw fw-home"></i> <span class="hidden-xs">{{t "user-portal.applications.breadcrumb"}}</span></a></li>
         </ol>
     </div>
 {{/fillZone}}
