--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/signup.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/signup.hbs
@@ -16,74 +16,114 @@
             </button>
         </div>
     {{else}}
-        <div class="page-content-wrapper">
-            <div class="container">
+        <div class="page-content-wrapper col-xs-12 col-sm-12 col-md-9 col-lg-9 signUp">
+            <div class="data-container">
                 <div class="signup-form-wrapper">
-                    <h3 class="signup-header">{{t "user-portal.user.add"}}</h3></br>
                     <form method="post" class="form-horizontal" id="self-signUp-form">
                         <div class="form-group">
-                            <div class="col-xs-14 col-sm-14 col-md-8 col-lg-6">
-                                {{#each signupClaims}}
-                                    {{#if this.required}}
-                                        </br><label for={{this.displayLabel}}>{{this.displayName}}
-                                        <span>*</span></label></br>
-                                        <input type={{#if this.dataType}}{{this.dataType}}{{else}}"text"{{/if}}
-                                                name={{this.claimURI}} id={{this.displayLabel}} class="form-control"
-                                                pattern={{#if this.regex}}{{this.regex}}{{/if}}
-                                                        placeholder={{this.displayLabel}} required/>
-                                    {{else}}
-                                        <label for={{this.displayLabel}}>{{this.displayName}}</label></br>
-                                        <input type={{#if this.dataType}}{{this.dataType}}{{else}}"text"{{/if}}
-                                                name={{this.claimURI}} id={{this.displayLabel}} class="form-control"
-                                                pattern={{#if this.regex}}{{this.regex}}{{/if}}
-                                                        placeholder={{this.displayLabel}} />
-                                    {{/if}}
-                                {{else}}
-                                    {{log "No Defined Claims for the user self sign-up!" level="error"}}
-                                    <p class="empty">No content</p>
+                            <div class="col-xs-18 col-sm-18 col-md-10 col-lg-8">
+                                <h3><b>{{t "user-portal.create.account.title"}}</b></h3>
+                                <h4>{{t "user-portal.create.account.sub.title"}}</h4></div>
+                        </div>
+
+                        <div class="form-group">
+                            <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5">
+                                {{#each usernameClaim}}
+                                    </br><label for={{this.displayName}}>{{this.displayName}}:
+                                    <span>*</span></label>
+                                    <input type={{#if this.dataType}}{{this.dataType}}{{else}}"text"{{/if}}
+                                            name={{this.claimURI}} id={{this.displayLabel}} class="form-control"
+                                            pattern={{#if this.regex}}{{this.regex}}{{/if}}
+                                            placeholder={{#if this.defaultValue}}{{this.defaultValue}}{{else}}""{{/if}}
+                                            required/>
                                 {{/each}}
                             </div>
                         </div>
-                        <div class="form-group password_strength_meter ">
-                            <div class="col-xs-14 col-sm-14 col-md-8 col-lg-6">
-                                <label for="password">Password<span>*</span></label></br>
-                                <input type="password" name="password" id="password" class="form-control"
-                                       placeholder="password" data-schemaformat="password" required/>
+                        <div class="form-group">
+                            <div class="password_strength_meter ">
+                                <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5">
+                                    <label for="password">Password:<span>*</span></label></br>
+                                    <input type="password" name="password" id="password" class="form-control"
+                                           data-schemaformat="password" required/>
 
-                                <div id="password_strength_wrap">
-                                    <div class="pwd_str">
-                                        <div id="passwordDescription">Password not entered</div>
-                                        <div id="passwordStrength" class="strength0"></div>
+                                    <div id="password_strength_wrap">
+                                        <div class="pwd_str">
+                                            <div id="passwordDescription">Password not entered</div>
+                                            <div id="passwordStrength" class="strength0"></div>
+                                        </div>
+                                        <div id="pswd_info">
+                                            <i>Make your password strong by having:</i>
+                                            <ul>
+                                                <li class="invalid" id="length"><span class="status_icon"></span>At
+                                                    least 6
+                                                    characters
+                                                </li>
+                                                <li class="invalid" id="pnum"><span class="status_icon"></span>At least
+                                                    one
+                                                    number
+                                                </li>
+                                                <li class="invalid" id="capital"><span class="status_icon"></span>At
+                                                    least
+                                                    one lowercase &amp; one uppercase letter
+                                                </li>
+                                                <li class="invalid" id="spchar"><span class="status_icon"></span>At
+                                                    least
+                                                    one special character
+                                                </li>
+                                            </ul>
+                                        </div>
+                                        <!-- END pswd_info -->
                                     </div>
-                                    <div id="pswd_info">
-                                        <i>Make your password strong by having:</i>
-                                        <ul>
-                                            <li class="invalid" id="length"><span class="status_icon"></span>At least 6
-                                                characters
-                                            </li>
-                                            <li class="invalid" id="pnum"><span class="status_icon"></span>At least one
-                                                number
-                                            </li>
-                                            <li class="invalid" id="capital"><span class="status_icon"></span>At least
-                                                one lowercase &amp; one uppercase letter
-                                            </li>
-                                            <li class="invalid" id="spchar"><span class="status_icon"></span>At least
-                                                one special character
-                                            </li>
-                                        </ul>
-                                    </div>
-                                    <!-- END pswd_info -->
+                                    <!-- END pwd_strength_wrap -->
                                 </div>
-                                <!-- END pwd_strength_wrap -->
+                            </div>
+
+                            <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5">
+                                <label for="confirmPassword">Confirm Password:<span>*</span></label>
+                                <input type="password" name="confirmPassword" id="confirmPassword"
+                                       class="form-control" required/>
                             </div>
                         </div>
+
                         <div class="form-group">
-                            <div class="col-xs-14 col-sm-14 col-md-8 col-lg-6">
-                                <label for="confirmPassword">Confirm Password<span>*</span></label></br>
-                                <input type="password" name="confirmPassword" id="confirmPassword" class="form-control"
-                                       placeholder="confirmPassword" required/>
-                                </br></br><input id="register" class="btn btn-default btn-primary add-margin-right-2x"
-                                                 type="submit" value="Register"/></div>
+                            {{#each signupClaims}}
+                                <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5">
+                                    {{#if this.required}}
+                                        <label for={{this.displayLabel}}>{{this.displayName}}:
+                                            <span>*</span></label>
+                                        <input type={{#if this.dataType}}{{this.dataType}}{{else}}"text"{{/if}}
+                                                name={{this.claimURI}} id={{this.displayLabel}} class="form-control"
+                                                pattern={{#if this.regex}}{{this.regex}}{{/if}}
+                                                placeholder={{#if this.defaultValue}}{{this.defaultValue}}{{else}}""{{/if}}
+                                                required/></br>
+                                    {{else}}
+                                        <label for={{this.displayLabel}}>{{this.displayName}}:</label>
+                                        <input type={{#if this.dataType}}{{this.dataType}}{{else}}"text"{{/if}}
+                                                name={{this.claimURI}} id={{this.displayLabel}} class="form-control"
+                                                pattern={{#if this.regex}}{{this.regex}}{{/if}}
+                                                placeholder={{#if this.defaultValue}}{{this.defaultValue}}{{else}}""{{/if}} /></br>
+                                    {{/if}}
+                                </div>
+                            {{else}}
+                                {{log "No Defined Claims for the user self sign-up!" level="error"}}
+                                <p class="empty">No content</p>
+                            {{/each}}
+                        </div>
+
+
+                        <div class="form-group">
+                            <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5">
+                                <<label for="securityQuestion">Security Question:</label>
+                                <select>
+                                    {{#each challengeQuestions}}
+                                        <option value={{this.question}}>{{this.question}}</option>
+                                    {{/each}}
+                                </select></br>
+                                <label for="answer">Answer:</label>
+                                <input type="answer" name="answer" id="answer" class="form-control" required/>
+                                </br></br>
+                                <input id="register" class="btn btn-default btn-primary add-margin-right-2x"
+                                       type="submit" value="Register"/></div>
                         </div>
                     </form>
                 </div>
