--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/login.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/login.hbs
@@ -8,7 +8,7 @@
 {{#fillZone "content"}}
     {{#if errorMessage}}
         <div class="alert alert-danger" role="alert">
-            <i class="icon fw fw-error"></i><strong>Login Error!</strong>
+            <i class="icon fw fw-error"></i><strong>{{t "user-portal.user.login.error.default"}}</strong>
             {{errorMessage}}
             <button type="button" class="close" aria-label="close" data-dismiss="alert">
                 <span aria-hidden="true">
@@ -41,20 +41,22 @@
                     <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5">
                         <label class="checkbox">
                             <input type="checkbox" checked="">
-                            <span class="helper">Keep me signed in</span>
+                            <span class="helper">{{t "user-portal.user.login.rememberMe"}}</span>
                         </label>
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5">
-                        <button type="submit" class="btn btn-default btn-primary add-margin-right-2x">Sign In</button>
+                        <button type="submit"
+                                class="btn btn-default btn-primary add-margin-right-2x">{{t "user-portal.user.login.title"}}</button>
                         <!--not yet implemented-->
                         <!--<button type="submit" class="btn btn-default btn-secondary hidden-xs hidden-sm">Go Back</button>-->
                     </div>
                 </div>
                 <!--not yet implemented-->
                 <!--<a href="{{@contextPath}}/recover-password" class="add-margin-bottom-5x remove-margin-lg remove-margin-md">Forgot Password</a>-->
-                <p class="hidden-xs hidden-sm">Don't have an account? <a href="{{@contextPath}}/signup">Register Now</a>
+                <p class="hidden-xs hidden-sm">{{t "user-portal.user.signup.message"}}<a href="{{@contextPath}}/signup">
+                    &nbsp;{{t "user-portal.user.signup.title"}}</a>
                 </p>
             </form>
         </div>
