--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/signup.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/signup.hbs
@@ -22,8 +22,8 @@
                     <form method="post" class="form-horizontal" id="self-signUp-form">
                         <div class="form-group">
                             <div class="col-xs-18 col-sm-18 col-md-10 col-lg-8">
-                                <h3><b>{{t "user-portal.create.account.title"}}</b></h3>
-                                <h4>{{t "user-portal.create.account.sub.title"}}</h4></div>
+                                <h3><b>{{t "user-portal.user.signup.title"}}</b></h3>
+                                <h4>{{t "user-portal.user.signup.sub.title"}}</h4></div>
                         </div>
 
                         <div class="form-group">
@@ -42,33 +42,31 @@
                         <div class="form-group">
                             <div class="password_strength_meter ">
                                 <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5">
-                                    <label for="password">Password:<span>*</span></label></br>
+                                    <label for="password">{{t "user-portal.user.signup.password"}}
+                                        :<span>*</span></label></br>
                                     <input type="password" name="password" id="password" class="form-control"
                                            data-schemaformat="password" required/>
 
                                     <div id="password_strength_wrap">
                                         <div class="pwd_str">
-                                            <div id="passwordDescription">Password not entered</div>
+                                            <div id="passwordDescription">{{t "user-portal.user.password.notEntered"}}</div>
                                             <div id="passwordStrength" class="strength0"></div>
                                         </div>
                                         <div id="pswd_info">
-                                            <i>Make your password strong by having:</i>
+                                            <i>{{t "user-portal.user.password.validation.info1"}}:</i>
                                             <ul>
-                                                <li class="invalid" id="length"><span class="status_icon"></span>At
-                                                    least 6
-                                                    characters
+                                                <li class="invalid" id="length"><span class="status_icon"></span>
+                                                    {{t "user-portal.user.password.validation.info2"}}
                                                 </li>
-                                                <li class="invalid" id="pnum"><span class="status_icon"></span>At least
-                                                    one
-                                                    number
+                                                <li class="invalid" id="pnum"><span class="status_icon"></span>
+                                                    {{t "user-portal.user.password.validation.info3"}}
                                                 </li>
-                                                <li class="invalid" id="capital"><span class="status_icon"></span>At
-                                                    least
-                                                    one lowercase &amp; one uppercase letter
+                                                <li class="invalid" id="capital"><span class="status_icon"></span>
+                                                    {{t "user-portal.user.password.validation.info4"}}&amp;
+                                                    {{t "user-portal.user.password.validation.info5"}}
                                                 </li>
-                                                <li class="invalid" id="spchar"><span class="status_icon"></span>At
-                                                    least
-                                                    one special character
+                                                <li class="invalid" id="spchar"><span class="status_icon"></span>
+                                                    {{t "user-portal.user.password.validation.info6"}}
                                                 </li>
                                             </ul>
                                         </div>
@@ -79,7 +77,8 @@
                             </div>
 
                             <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5">
-                                <label for="confirmPassword">Confirm Password:<span>*</span></label>
+                                <label for="confirmPassword">{{t "user-portal.user.password.reset.new.confirm"}}
+                                    :<span>*</span></label>
                                 <input type="password" name="confirmPassword" id="confirmPassword"
                                        class="form-control" required/>
                             </div>
@@ -106,28 +105,35 @@
                                 </div>
                             {{else}}
                                 {{log "No Defined Claims for the user self sign-up!" level="error"}}
-                                <p class="empty">No content</p>
+                                <p class="empty">{{t "user-portal.user.signup.no.content"}}</p>
                             {{/each}}
                         </div>
 
 
                         <div class="form-group">
                             <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5">
-                                <<label for="securityQuestion">Security Question:</label>
+                                <label for="securityQuestion">{{t "user-portal.user.signup.security.question"}}:</label>
                                 <select>
                                     {{#each challengeQuestions}}
                                         <option value={{this.question}}>{{this.question}}</option>
                                     {{/each}}
                                 </select></br>
-                                <label for="answer">Answer:</label>
+                                <label for="answer">{{t "user-portal.user.signup.security.question.answer"}}:</label>
                                 <input type="answer" name="answer" id="answer" class="form-control" required/>
-                                </br></br>
-                                <input id="register" class="btn btn-default btn-primary add-margin-right-2x"
-                                       type="submit" value="Register"/></div>
+                            </div>
                         </div>
-                    </form>
+                        </br>
+                        <div class="form-group">
+                            <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5">
+                                <input id="register" class="btn btn-default btn-primary add-margin-right-2x"
+                                       type="submit" value="Sign Up"/></div>
+                        </div>
+                        <h5>{{t "user-portal.user.login.message"}}<a href="{{@contextPath}}/login">
+                            &nbsp;{{t "user-portal.user.login.title"}}</a></h5>
                 </div>
+                </form>
             </div>
+        </div>
         </div>
     {{/if}}
 {{/fillZone}}
