--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/signup.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/signup.hbs
@@ -51,10 +51,10 @@
                                     <div class="form-group">
                                         <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5">
                                             {{#each usernameClaim}}
-                                                </br><label for={{this.displayName}}>{{this.displayName}}:
+                                                </br><label for={{this.claimLabel}}>{{t this.claimLabel}}:
                                                 <span>*</span></label>
                                                 <input type={{#if this.dataType}}{{this.dataType}}{{else}}"text"{{/if}}
-                                                        name={{this.claimURI}} id={{this.displayLabel}}
+                                                        name={{this.claimURI}} id={{this.claimLabel}}
                                                         class="form-control"
                                                         pattern={{#if this.regex}}{{this.regex}}{{/if}}
                                                         placeholder={{#if this.defaultValue}}{{this.defaultValue}}{{else}}""{{/if}}
@@ -116,18 +116,18 @@
                                         {{#each signupClaims}}
                                             <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5">
                                                 {{#if this.required}}
-                                                    <label for={{this.displayLabel}}>{{this.displayName}}:
+                                                    <label for={{this.claimLabel}}>{{t this.claimLabel}}:
                                                         <span>*</span></label>
                                                     <input type={{#if this.dataType}}{{this.dataType}}{{else}}"text"{{/if}}
-                                                            name={{this.claimURI}} id={{this.displayLabel}}
+                                                            name={{this.claimURI}} id={{this.claimLabel}}
                                                             class="form-control"
                                                             pattern={{#if this.regex}}{{this.regex}}{{/if}}
                                                             placeholder={{#if this.defaultValue}}{{this.defaultValue}}{{else}}""{{/if}}
                                                             required/></br>
                                                 {{else}}
-                                                    <label for={{this.displayLabel}}>{{this.displayName}}:</label>
+                                                    <label for={{this.claimLabel}}>{{t this.claimLabel}}:</label>
                                                     <input type={{#if this.dataType}}{{this.dataType}}{{else}}"text"{{/if}}
-                                                            name={{this.claimURI}} id={{this.displayLabel}}
+                                                            name={{this.claimURI}} id={{this.claimLabel}}
                                                             class="form-control"
                                                             pattern={{#if this.regex}}{{this.regex}}{{/if}}
                                                             placeholder={{#if this.defaultValue}}{{this.defaultValue}}{{else}}""{{/if}} /></br>
@@ -139,23 +139,6 @@
                                         {{/each}}
                                     </div>
 
-
-                                    <div class="form-group">
-                                        <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5">
-                                            <label for="securityQuestion">{{t "user-portal.user.signup.security.question"}}
-                                                :</label>
-                                            <select>
-                                                {{#each challengeQuestions}}
-                                                    <option value={{this.question}}>{{this.question}}</option>
-                                                {{/each}}
-                                            </select></br>
-                                            <label for="answer">{{t "user-portal.user.signup.security.question.answer"}}
-                                                :</label>
-                                            <input type="answer" name="answer" id="answer" class="form-control"
-                                                   required/>
-                                        </div>
-                                    </div>
-                                    </br>
                                     <div class="form-group">
                                         <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5">
                                             <input id="register" class="btn btn-default btn-primary add-margin-right-2x"
