--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/fragments/profile/profile.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/fragments/profile/profile.hbs
@@ -31,7 +31,11 @@
             <div class="thumbnail icon">
                 <div class="square-element setbgcolor">
                     <a id="image-edit" class="sub-icon" title="Edit"><i class="fw fw-camera fw-lg"></i></a>
-                    <div class="user-name-icon">D</div>
+                    {{#if profileImage}}
+                        <img src="/user-portal/root/apis/profile-image-service/image?userid={{userId}}" alt="profileimage">
+                    {{else}}
+                        <div class="user-name-icon">D</div>
+                    {{/if}}
                 </div>
             </div>
         </div>
