--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/fragments/profile/profile.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/fragments/profile/profile.hbs
@@ -34,7 +34,7 @@
                     {{#if profileImage}}
                         <img src="/user-portal/root/apis/profile-image-service/image?userid={{userId}}" alt="profileimage">
                     {{else}}
-                        <div class="user-name-icon">D</div>
+                        <div class="user-name-icon">{{usernameChar}}</div>
                     {{/if}}
                 </div>
             </div>
