Localization support for error messgaes in signup and login
Conflicts:
	portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/lang/en_US.properties

--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/login.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/login.hbs
@@ -109,8 +109,8 @@
 {{#fillZone "content"}}
     {{#if errorMessage}}
         <div class="alert alert-danger" role="alert">
-            <i class="icon fw fw-error"></i><strong>{{t "user-portal.user.login.error.default"}}</strong>
-            {{errorMessage}}
+            <i class="icon fw fw-error"></i><strong>{{t "user-portal.user.login.error.default"}}</strong>&nbsp;
+            {{t errorMessage}}
             <button type="button" class="close" aria-label="close" data-dismiss="alert">
                 <span aria-hidden="true">
                     <i class="fw fw-cancel"></i>
