Fixing https://wso2.org/jira/browse/IDENTITY-5615

--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/public/css/user-portal.css
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/public/css/user-portal.css
@@ -500,4 +500,12 @@ label.error {
 .background-grey {
     background-color: #efefef;
 }
+/* Profile thumbnail image */
+.profile-thumb {
+    width: 100%;
+}
 
+.profile-thumb-sm {
+    height: 30px;
+    width: 30px;
+}
