--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/fragments/usermenu/usermenu.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/fragments/usermenu/usermenu.hbs
@@ -3,7 +3,7 @@
         <a class="dropdown" data-toggle="dropdown" aria-expanded="false">
             {{#if profileImage}}
                 <img src="/user-portal/root/apis/profile-image-service/image?userid={{userId}}" alt="profileimage"
-                     class="img-circle" height="30px">
+                     class="img-circle profile-thumb-sm" height="30px">
             {{else}}
                 <span class="icon fw-stack">
                                <i class="fw fw-circle fw-stack-2x"></i>
